--- a/index.html
+++ b/index.html
@@ -8,109 +8,134 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Noto+Serif+Devanagari:wght@400;600&display=swap" rel="stylesheet">
 <style>
-  :root{
-  /* colors */
-  --bg: #f6f8ff; --fg:#0d1025; --muted:#5f6a86; --card:#ffffff; --border:#e6e9f5; --accent:#6b74ff;
-  --btn:#f3f5ff; --btn-border:#d7dbef; --shadow: 0 14px 40px rgba(22, 30, 84, .10);
-  /* type size controls */
-  --skt-size: 1.5rem;
-  --trl-size: 1.05rem;
-  --body-size: 1.03rem;
+ :root{
+  /* Palette: midnight + temple gold */
+  --bg:#070a17; --fg:#eef3ff; --muted:#a9b2d6; --card:#0e1430; --border:#1c2550;
+  --accent:#ffd66b; --accent-2:#8ab6ff;
+  --btn:#121a3b; --btn-border:#26306a; --shadow:0 22px 60px rgba(0,0,0,.55);
+  --skt-size: 1.8rem; --trl-size: 1.06rem; --body-size: 1.06rem;
 }
-@media (prefers-color-scheme: dark){
+@media (prefers-color-scheme: light){
   :root{
-    --bg:#0b1020; --fg:#eaf0ff; --muted:#9aa6c7; --card:#111833; --border:#1d2748; --accent:#7aa2ff;
-    --btn:#16224a; --btn-border:#24335f; --shadow: 0 18px 50px rgba(0,0,0,.45);
+    --bg:#f6f7ff; --fg:#0b0f20; --muted:#59638a; --card:#ffffff; --border:#e2e6f6;
+    --accent:#c18b00; --accent-2:#5f78ff;
+    --btn:#f3f5ff; --btn-border:#d9def2; --shadow:0 22px 60px rgba(24,30,70,.12);
   }
 }
 
-/* base */
+/* Base + animated “spotlight” background */
 *{ box-sizing:border-box; -webkit-tap-highlight-color:transparent }
-html, body { height:100% }
-body {
-  font-family: Inter, system-ui, sans-serif;
+html,body{height:100%}
+body{
+  font-family: Inter, system-ui, sans-serif; color:var(--fg); margin:0;
   background:
-    radial-gradient(1200px 600px at 50% -400px, rgba(123,133,255,.18), transparent 60%),
+    radial-gradient(1200px 600px at 50% -380px, rgba(255,214,107,.10), transparent 60%),
+    radial-gradient(900px 400px at 10% 120%, rgba(138,182,255,.08), transparent 60%),
     var(--bg);
-  color:var(--fg); margin:0;
+  overflow-x:hidden; position:relative; isolation:isolate;
 }
-.wrap{ max-width: 900px; margin: 16px auto; padding: 0 14px 60px }
+body::before{
+  /* slow moving light sweep */
+  content:""; position:fixed; inset:-40%;
+  background: conic-gradient(from 120deg at 50% 50%,
+    rgba(255,214,107,.12), rgba(138,182,255,.08), transparent 30%);
+  mix-blend-mode: screen; filter: blur(60px); opacity:.35; z-index:-1;
+  animation: sweep 18s linear infinite;
+}
+@keyframes sweep{ to{ transform: rotate(360deg) } }
+@media (prefers-reduced-motion: reduce){ body::before{ animation:none } }
 
-/* header */
-header{ display:flex; align-items:center; justify-content:space-between; gap:.6rem; margin: 8px 0 12px }
-.title{ font-size: 1.15rem; font-weight: 700; letter-spacing:.2px }
+.wrap{ max-width:960px; margin: 18px auto; padding: 0 14px 80px }
 
-/* control bar */
+/* Header */
+header{ display:flex; align-items:center; justify-content:space-between; margin:6px 0 12px }
+.title{ font-weight:800; letter-spacing:.3px; font-size:1.2rem }
+
+/* Control bar → glassy, cinematic */
 .bar{
-  display:flex; flex-wrap:wrap; gap:.55rem; align-items:center;
-  padding: 10px; background: var(--card); border:1px solid var(--border);
-  border-radius:16px; box-shadow: var(--shadow);
-  position: sticky; top: 8px; z-index: 5;
+  display:flex; flex-wrap:wrap; gap:.6rem; align-items:center;
+  padding:12px; border-radius:18px; border:1px solid var(--border);
+  background: linear-gradient(180deg, rgba(18,26,59,.85), rgba(10,14,34,.75));
+  box-shadow: var(--shadow), inset 0 1px 0 rgba(255,255,255,.06);
+  position:sticky; top:8px; z-index:10; backdrop-filter: blur(12px);
 }
-label{ display:flex; align-items:center; gap:.35rem; color:var(--muted); font-size:.95rem }
+label{ display:flex; align-items:center; gap:.45rem; color:var(--muted); font-size:.95rem }
 input, select{
-  padding:.65rem .75rem; border-radius:12px; border:1px solid var(--btn-border);
-  background:var(--btn); color:var(--fg); font-size: .98rem; min-height:44px;
+  padding:.75rem .9rem; border-radius:12px; border:1px solid var(--btn-border);
+  background: linear-gradient(180deg, var(--btn), #0b112c);
+  color:var(--fg); font-size:1rem; min-height:46px;
 }
-input[type=number]{ width:4.8rem }
+input[type=number]{ width:5rem }
 button{
-  padding:.68rem 1rem; border-radius:12px; border:1px solid var(--btn-border);
-  background:var(--btn); color:var(--fg); cursor:pointer; font-size:.98rem;
-  transition: transform .06s ease, box-shadow .2s ease, background .2s ease;
-  min-height:44px;
+  padding:.78rem 1.1rem; border-radius:12px; border:1px solid var(--btn-border);
+  background: linear-gradient(180deg, var(--btn), #0b112c);
+  color:var(--fg); cursor:pointer; font-size:1rem; min-height:46px;
+  transition: transform .06s ease, box-shadow .25s ease, filter .2s ease;
 }
-button:hover{ transform: translateY(-1px) }
+button:hover{ transform: translateY(-1px); filter: brightness(1.05) }
 button:active{ transform: translateY(0) scale(.98) }
-button:focus-visible, input:focus-visible, select:focus-visible{
-  outline: 2px solid var(--accent); outline-offset: 2px;
-}
 .accent{
-  background: linear-gradient(180deg, #8fb3ff, #6f95ff);
-  color:#0b1020; border:0; font-weight:700;
-  box-shadow: 0 6px 14px rgba(111,149,255,.35);
+  /* glowing gold action button */
+  background: radial-gradient(80% 140% at 50% 0%, #ffe59b, #ffcb4e);
+  color:#2b2100; border:0; font-weight:800; letter-spacing:.2px;
+  box-shadow: 0 10px 24px rgba(255,203,78,.35), 0 0 0 1px rgba(255,203,78,.35) inset;
 }
-.status{ color:var(--muted); font-size:.9rem; margin-left:auto }
+.status{ color:var(--muted); font-size:.92rem; margin-left:auto }
 
-/* verse card */
+/* Verse card with halo + gilded dividers */
 .card{
-  background:var(--card); border:1px solid var(--border); border-radius:18px;
-  padding: 20px; box-shadow: var(--shadow); margin-top:14px;
+  position:relative; background: linear-gradient(180deg, rgba(255,255,255,.02), transparent), var(--card);
+  border:1px solid var(--border); border-radius:20px; padding:22px 20px;
+  box-shadow: var(--shadow);
 }
-h2{ margin:0 0 14px; font-size:1rem; font-weight:700; color:var(--muted) }
+.card::before{
+  /* halo behind verse */
+  content:""; position:absolute; inset:-2px; z-index:-1; border-radius:22px;
+  background: radial-gradient(380px 220px at 50% 10%, rgba(255,214,107,.18), transparent 60%);
+  filter: blur(10px);
+}
+h2{ margin:0 0 16px; font-size:1.02rem; font-weight:800; color:var(--muted) }
 
-/* sections */
-.section{ margin-top:12px; animation: fadeIn .25s ease }
+.section{ margin-top:14px; animation: rise .25s ease }
+@keyframes rise{ from{ opacity:0; transform: translateY(6px) } to{ opacity:1; transform:none } }
+
 .skt{
-  font-family: "Noto Serif Devanagari", serif;
-  font-size: var(--skt-size); line-height: 1.8; white-space: pre-wrap;
-  text-align:center; letter-spacing:.2px;
+  font-family:"Noto Serif Devanagari", serif;
+  font-size: var(--skt-size); line-height:1.9; white-space:pre-wrap;
+  text-align:center; letter-spacing:.25px;
+  text-shadow: 0 1px 0 rgba(255,255,255,.04), 0 0 22px rgba(255,214,107,.18);
 }
 .trl{
-  font-style: italic; white-space: pre-wrap; opacity:.97;
+  font-style: italic; white-space:pre-wrap; opacity:.95;
   font-size: var(--trl-size); text-align:center;
 }
-.meaning, .context{ font-size: var(--body-size); line-height:1.75 }
-.divider{ height:1px; background:var(--border); margin:14px 0; border-radius:1px }
+.meaning, .context{ font-size: var(--body-size); line-height:1.85 }
 
-/* micro-animations */
-@keyframes fadeIn { from { opacity:0; transform: translateY(4px) } to { opacity:1; transform:none } }
+/* gilded divider */
+.divider{
+  height:1px; border-radius:1px; margin:16px 0;
+  background: linear-gradient(90deg, transparent, rgba(255,214,107,.65), transparent);
+  opacity:.55;
+}
 
-/* responsive tweaks */
+/* Focus rings */
+button:focus-visible, input:focus-visible, select:focus-visible{
+  outline:2px solid var(--accent-2); outline-offset:2px;
+}
+
+/* Responsive */
 @media (max-width: 560px){
-  .wrap{ padding: 0 12px 70px }
-  .bar{ gap:.5rem; padding:10px; border-radius:14px }
-  input[type=number]{ width:5.4rem }
-  .skt{ font-size: calc(var(--skt-size) + .1rem) }
-  .trl{ font-size: calc(var(--trl-size) + .02rem) }
-  .meaning, .context{ font-size: 1.05rem }
+  .wrap{ padding: 0 12px 84px }
+  .bar{ border-radius:16px; padding:10px }
+  input[type=number]{ width:5.6rem }
+  .skt{ font-size: calc(var(--skt-size) + .12rem) }
+  .meaning, .context{ font-size: 1.08rem }
+}
+@media (max-width: 360px){
+  .title{ font-size: 1.05rem }
+  .skt{ font-size: 1.45rem }
 }
 
-/* ultra-compact mode for very small screens */
-@media (max-width: 360px){
-  .title{ font-size: 1rem }
-  label{ font-size:.9rem }
-  .skt{ font-size: 1.35rem }
-}
 </style>
 </head>
 <body>
@@ -266,4 +291,5 @@ loadVerseCount().then(load);
 </script>
 </body>
 </html>
+
 
