--- a/index.html
+++ b/index.html
@@ -9,133 +9,179 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Noto+Serif+Devanagari:wght@400;600&display=swap" rel="stylesheet">
 <style>
  :root{
-  /* Palette: midnight + temple gold */
-  --bg:#070a17; --fg:#eef3ff; --muted:#a9b2d6; --card:#0e1430; --border:#1c2550;
-  --accent:#ffd66b; --accent-2:#8ab6ff;
-  --btn:#121a3b; --btn-border:#26306a; --shadow:0 22px 60px rgba(0,0,0,.55);
-  --skt-size: 1.8rem; --trl-size: 1.06rem; --body-size: 1.06rem;
-}
-@media (prefers-color-scheme: light){
-  :root{
-    --bg:#f6f7ff; --fg:#0b0f20; --muted:#59638a; --card:#ffffff; --border:#e2e6f6;
-    --accent:#c18b00; --accent-2:#5f78ff;
-    --btn:#f3f5ff; --btn-border:#d9def2; --shadow:0 22px 60px rgba(24,30,70,.12);
-  }
+  /* Midnight + temple gold palette */
+  --bg:#050815; --fg:#eef3ff; --muted:#a8b2db; --card:#0c122e; --border:#1a2555;
+  --gold:#ffd66b; --gold2:#ffb83f; --aqua:#7fb6ff; --vio:#9a7bff;
+  --btn:#111a45; --btn-border:#243070; --shadow:0 26px 70px rgba(0,0,0,.6);
+  --skt-size: 2rem; --trl-size: 1.08rem; --body-size: 1.08rem;
 }
 
-/* Base + animated “spotlight” background */
+/* ===== BACKGROUND: starfield + aurora sweep ===== */
 *{ box-sizing:border-box; -webkit-tap-highlight-color:transparent }
 html,body{height:100%}
 body{
   font-family: Inter, system-ui, sans-serif; color:var(--fg); margin:0;
   background:
-    radial-gradient(1200px 600px at 50% -380px, rgba(255,214,107,.10), transparent 60%),
-    radial-gradient(900px 400px at 10% 120%, rgba(138,182,255,.08), transparent 60%),
-    var(--bg);
+    /* big aurora blobs */
+    radial-gradient(1200px 600px at 50% -380px, rgba(255,214,107,.14), transparent 60%),
+    radial-gradient(900px 500px at 8% 120%, rgba(127,182,255,.12), transparent 60%),
+    radial-gradient(700px 400px at 92% 120%, rgba(154,123,255,.10), transparent 60%),
+    #050815;
   overflow-x:hidden; position:relative; isolation:isolate;
 }
-body::before{
-  /* slow moving light sweep */
-  content:""; position:fixed; inset:-40%;
-  background: conic-gradient(from 120deg at 50% 50%,
-    rgba(255,214,107,.12), rgba(138,182,255,.08), transparent 30%);
-  mix-blend-mode: screen; filter: blur(60px); opacity:.35; z-index:-1;
-  animation: sweep 18s linear infinite;
+body::before, body::after{
+  /* layered starfields */
+  content:""; position:fixed; inset:-10%; z-index:-2; pointer-events:none;
+  background:
+    radial-gradient(2px 2px at 20% 30%, rgba(255,255,255,.9) 40%, transparent 41%),
+    radial-gradient(1.5px 1.5px at 70% 60%, rgba(255,255,255,.7) 40%, transparent 41%),
+    radial-gradient(1.8px 1.8px at 40% 80%, rgba(255,255,255,.8) 40%, transparent 41%),
+    radial-gradient(1.2px 1.2px at 85% 25%, rgba(255,255,255,.6) 40%, transparent 41%),
+    radial-gradient(1.6px 1.6px at 10% 70%, rgba(255,255,255,.75) 40%, transparent 41%),
+    transparent;
+  animation: drift1 120s linear infinite;
+  opacity:.55;
+  filter: drop-shadow(0 0 3px rgba(255,255,255,.35));
 }
-@keyframes sweep{ to{ transform: rotate(360deg) } }
-@media (prefers-reduced-motion: reduce){ body::before{ animation:none } }
+body::after{
+  transform: scale(1.4);
+  animation: drift2 160s linear infinite reverse;
+  opacity:.35;
+}
+@keyframes drift1 { to { transform: translate3d(-6%, -4%, 0) } }
+@keyframes drift2 { to { transform: translate3d(6%, 4%, 0) } }
 
-.wrap{ max-width:960px; margin: 18px auto; padding: 0 14px 80px }
+/* slow conic sweep glow */
+body::marker, body:focus{ outline:none }
+body > .wrap::before{
+  content:""; position:fixed; inset:-30%; z-index:-1; pointer-events:none;
+  background: conic-gradient(from 120deg at 50% 50%, rgba(255,214,107,.18), rgba(127,182,255,.12), transparent 30%);
+  mix-blend-mode: screen; filter: blur(70px); opacity:.35;
+  animation: sweep 22s linear infinite;
+}
+@keyframes sweep { to { transform: rotate(360deg) } }
+@media (prefers-reduced-motion: reduce){ body::before, body::after, .wrap::before { animation: none } }
 
-/* Header */
+.wrap{ max-width: 960px; margin: 16px auto; padding: 0 14px 86px }
+
+/* ===== HEADER ===== */
 header{ display:flex; align-items:center; justify-content:space-between; margin:6px 0 12px }
-.title{ font-weight:800; letter-spacing:.3px; font-size:1.2rem }
+.title{ font-weight:900; letter-spacing:.35px; font-size:1.22rem;
+  background: linear-gradient(90deg, var(--gold), #fff);
+  -webkit-background-clip:text; background-clip:text; color:transparent;
+  filter: drop-shadow(0 2px 10px rgba(255,214,107,.25));
+}
 
-/* Control bar → glassy, cinematic */
+/* ===== CONTROL BAR (glassy, neon edges) ===== */
 .bar{
-  display:flex; flex-wrap:wrap; gap:.6rem; align-items:center;
+  display:flex; flex-wrap:wrap; gap:.65rem; align-items:center;
   padding:12px; border-radius:18px; border:1px solid var(--border);
-  background: linear-gradient(180deg, rgba(18,26,59,.85), rgba(10,14,34,.75));
-  box-shadow: var(--shadow), inset 0 1px 0 rgba(255,255,255,.06);
+  background: linear-gradient(180deg, rgba(18,26,63,.85), rgba(10,14,34,.78));
+  box-shadow: var(--shadow), inset 0 1px 0 rgba(255,255,255,.06), 0 0 0 1px rgba(122,162,255,.12);
   position:sticky; top:8px; z-index:10; backdrop-filter: blur(12px);
 }
-label{ display:flex; align-items:center; gap:.45rem; color:var(--muted); font-size:.95rem }
+label{ display:flex; align-items:center; gap:.5rem; color:var(--muted); font-size:1rem }
 input, select{
-  padding:.75rem .9rem; border-radius:12px; border:1px solid var(--btn-border);
-  background: linear-gradient(180deg, var(--btn), #0b112c);
-  color:var(--fg); font-size:1rem; min-height:46px;
+  padding:.78rem .9rem; border-radius:14px; border:1px solid var(--btn-border);
+  background: linear-gradient(180deg, var(--btn), #0a1132);
+  color:var(--fg); font-size:1rem; min-height:48px;
+  box-shadow: inset 0 1px 0 rgba(255,255,255,.05);
 }
-input[type=number]{ width:5rem }
+input[type=number]{ width:5.4rem }
 button{
-  padding:.78rem 1.1rem; border-radius:12px; border:1px solid var(--btn-border);
-  background: linear-gradient(180deg, var(--btn), #0b112c);
-  color:var(--fg); cursor:pointer; font-size:1rem; min-height:46px;
-  transition: transform .06s ease, box-shadow .25s ease, filter .2s ease;
+  padding:.82rem 1.15rem; border-radius:14px; border:1px solid var(--btn-border);
+  background: linear-gradient(180deg, var(--btn), #0a1132);
+  color:var(--fg); cursor:pointer; font-size:1rem; min-height:48px;
+  transition: transform .08s ease, box-shadow .25s ease, filter .25s;
+  box-shadow: 0 0 0 rgba(0,0,0,0);
 }
-button:hover{ transform: translateY(-1px); filter: brightness(1.05) }
+button:hover{ transform: translateY(-1px); filter: brightness(1.06) }
 button:active{ transform: translateY(0) scale(.98) }
-.accent{
-  /* glowing gold action button */
-  background: radial-gradient(80% 140% at 50% 0%, #ffe59b, #ffcb4e);
-  color:#2b2100; border:0; font-weight:800; letter-spacing:.2px;
-  box-shadow: 0 10px 24px rgba(255,203,78,.35), 0 0 0 1px rgba(255,203,78,.35) inset;
+button:focus-visible, input:focus-visible, select:focus-visible{
+  outline:2px solid var(--aqua); outline-offset:2px;
 }
-.status{ color:var(--muted); font-size:.92rem; margin-left:auto }
+.accent{
+  background: radial-gradient(80% 140% at 50% 0%, #fff2b0, var(--gold));
+  color:#2b2100; border:0; font-weight:900; letter-spacing:.25px;
+  box-shadow: 0 12px 26px rgba(255,203,78,.38), 0 0 0 1px rgba(255,203,78,.35) inset;
+  animation: pulse 2.2s ease-in-out infinite;
+}
+@keyframes pulse{
+  0%,100%{ box-shadow: 0 12px 26px rgba(255,203,78,.32), 0 0 0 1px rgba(255,203,78,.32) inset }
+  50%{ box-shadow: 0 18px 36px rgba(255,203,78,.55), 0 0 0 1px rgba(255,203,78,.45) inset }
+}
+.status{ color:var(--muted); font-size:.95rem; margin-left:auto }
 
-/* Verse card with halo + gilded dividers */
+/* ===== VERSE CARD (halo + sheen) ===== */
 .card{
-  position:relative; background: linear-gradient(180deg, rgba(255,255,255,.02), transparent), var(--card);
-  border:1px solid var(--border); border-radius:20px; padding:22px 20px;
+  position:relative; background: linear-gradient(180deg, rgba(255,255,255,.03), rgba(255,255,255,.00)), var(--card);
+  border:1px solid var(--border); border-radius:22px; padding:24px 20px;
   box-shadow: var(--shadow);
+  overflow:hidden;
 }
 .card::before{
   /* halo behind verse */
-  content:""; position:absolute; inset:-2px; z-index:-1; border-radius:22px;
-  background: radial-gradient(380px 220px at 50% 10%, rgba(255,214,107,.18), transparent 60%);
-  filter: blur(10px);
+  content:""; position:absolute; inset:-2px; z-index:0; border-radius:24px;
+  background: radial-gradient(420px 260px at 50% 6%, rgba(255,214,107,.20), transparent 60%);
+  filter: blur(12px);
 }
-h2{ margin:0 0 16px; font-size:1.02rem; font-weight:800; color:var(--muted) }
+.card::after{
+  /* soft moving sheen */
+  content:""; position:absolute; top:-40%; bottom:-40%; width:35%;
+  left:-20%; transform: rotate(20deg); z-index:1;
+  background: linear-gradient(90deg, transparent, rgba(255,255,255,.09), transparent);
+  animation: sheen 8s ease-in-out infinite;
+}
+@keyframes sheen { 0%{ left:-30% } 50%{ left:70% } 100%{ left:-30% } }
 
-.section{ margin-top:14px; animation: rise .25s ease }
-@keyframes rise{ from{ opacity:0; transform: translateY(6px) } to{ opacity:1; transform:none } }
+h2{ margin:0 0 18px; font-size:1.04rem; font-weight:900; color:var(--muted); position:relative; z-index:2 }
 
+.section{ margin-top:16px; position:relative; z-index:2; animation: rise .3s ease }
+@keyframes rise{ from{ opacity:0; transform: translateY(8px) } to{ opacity:1; transform:none } }
+
+/* DRAMATIC VERSE */
 .skt{
   font-family:"Noto Serif Devanagari", serif;
-  font-size: var(--skt-size); line-height:1.9; white-space:pre-wrap;
-  text-align:center; letter-spacing:.25px;
-  text-shadow: 0 1px 0 rgba(255,255,255,.04), 0 0 22px rgba(255,214,107,.18);
+  font-size: var(--skt-size); line-height: 2.0; white-space: pre-wrap;
+  text-align:center; letter-spacing:.3px;
+  background: linear-gradient(180deg, #fff, #ffe9b6 70%, #ffc857);
+  -webkit-background-clip:text; background-clip:text; color:transparent;
+  text-shadow: 0 2px 0 rgba(255,255,255,.06), 0 0 22px rgba(255,214,107,.25);
+  filter: drop-shadow(0 4px 20px rgba(255,214,107,.06));
 }
 .trl{
-  font-style: italic; white-space:pre-wrap; opacity:.95;
+  font-style: italic; white-space: pre-wrap; opacity:.97;
   font-size: var(--trl-size); text-align:center;
+  color: rgba(255,255,255,.92);
 }
-.meaning, .context{ font-size: var(--body-size); line-height:1.85 }
+.meaning, .context{ font-size: var(--body-size); line-height:1.9 }
 
-/* gilded divider */
+/* animated gilded divider */
 .divider{
-  height:1px; border-radius:1px; margin:16px 0;
-  background: linear-gradient(90deg, transparent, rgba(255,214,107,.65), transparent);
-  opacity:.55;
+  height:1px; border-radius:1px; margin:18px 0;
+  background: linear-gradient(90deg, transparent, rgba(255,214,107,.7), transparent);
+  position:relative; overflow:hidden;
 }
-
-/* Focus rings */
-button:focus-visible, input:focus-visible, select:focus-visible{
-  outline:2px solid var(--accent-2); outline-offset:2px;
+.divider::after{
+  content:""; position:absolute; left:-20%; top:-1px; bottom:-1px; width:40%;
+  background: linear-gradient(90deg, transparent, rgba(255,255,255,.45), transparent);
+  animation: dash 3.4s linear infinite;
+  opacity:.7;
 }
+@keyframes dash { to { left:80% } }
 
-/* Responsive */
+/* ===== RESPONSIVE ===== */
 @media (max-width: 560px){
-  .wrap{ padding: 0 12px 84px }
-  .bar{ border-radius:16px; padding:10px }
-  input[type=number]{ width:5.6rem }
-  .skt{ font-size: calc(var(--skt-size) + .12rem) }
-  .meaning, .context{ font-size: 1.08rem }
+  .wrap{ padding: 0 12px 92px }
+  .bar{ border-radius:18px; padding:12px }
+  input[type=number]{ width:5.8rem }
+  .skt{ font-size: calc(var(--skt-size) + .18rem) }
+  .meaning, .context{ font-size: 1.1rem }
 }
 @media (max-width: 360px){
-  .title{ font-size: 1.05rem }
-  .skt{ font-size: 1.45rem }
+  .title{ font-size: 1.06rem }
+  .skt{ font-size: 1.6rem }
 }
-
 </style>
 </head>
 <body>
@@ -291,5 +337,6 @@ loadVerseCount().then(load);
 </script>
 </body>
 </html>
+
 
 
