--- a/index.html
+++ b/index.html
@@ -217,6 +217,13 @@ h2{ margin:0 0 18px; font-size:1.04rem; font-weight:900; color:var(--muted); pos
       </label>
       <span class="status" id="status">API: vedicscriptures.github.io</span>
     </div>
+<div id="chapterIntro" style="
+  font-size:1.05rem;
+  font-style:italic;
+  color:var(--gold);
+  margin:14px 0;
+  display:none;
+"></div>
 
     <div class="card">
       <h2 id="title">Chapter 1, Verse 1</h2>
@@ -231,6 +238,14 @@ h2{ margin:0 0 18px; font-size:1.04rem; font-weight:900; color:var(--muted); pos
       <div class="section meaning" id="meaning"></div>
       <div class="divider"></div>
       <div class="section context" id="context"></div>
+     <div class="divider"></div>
+<div id="chapterSummary" style="
+  font-size:1.05rem;
+  font-style:italic;
+  color:var(--gold2);
+  margin-top:12px;
+  display:none;
+"></div>
     </div>
   </div>
 
@@ -414,6 +429,7 @@ loadVerseCount().then(load);
 </script>
 </body>
 </html>
+
 
 
 
