--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ h2{ margin:0 0 18px; font-size:1.04rem; font-weight:900; color:var(--muted); pos
       <span class="status" id="status">API: vedicscriptures.github.io</span>
     </div>
  <div class="tools">
-  <button id="clearCache" class="ghost" style="display:none;">Clear Cache</button>
+  <button id="clearCache" class="ghost" title="Clear saved data">⟳</button>
 </div>
 
 <div id="chapterIntro" style="
@@ -469,6 +469,7 @@ loadVerseCount().then(load);
 
 </body>
 </html>
+
 
 
 
